[package]
name = "metatype"
version = "0.2.0"
license = "MIT OR Apache-2.0"
authors = ["Alec Mocatta <alec@mocatta.net>"]
categories = ["development-tools","rust-patterns"]
keywords = ["meta","types","trait-object","vtable","slice"]
description = """
Helper methods to determine whether a type is `TraitObject`, `Slice` or `Concrete`, and work with them respectively.
"""
repository = "https://github.com/alecmocatta/metatype"
homepage = "https://github.com/alecmocatta/metatype"
documentation = "https://docs.rs/metatype/0.2.0"
readme = "README.md"
edition = "2018"

[badges]
azure-devops = { project = "alecmocatta/metatype", pipeline = "tests" }
maintenance = { status = "passively-maintained" }
